--- a/.condarc
+++ b/.condarc
@@ -1,4 +1,7 @@
 channels:
+  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/conda-forge
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free/
+  - conda-forge
   - defaults
 show_channel_urls: true
+
